input loader overlapping issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -7128,3 +7128,10 @@ left: 17rem;
        min-width: 160px;
   }
 }
+.rotate90 {
+  transform: rotate(90deg);
+  width: 12px;
+}
+.select__menu {
+  z-index: 12 !important;
+}
